Fix z-index issue with before element

--- a/src/components/Location/location.module.css
+++ b/src/components/Location/location.module.css
@@ -5,11 +5,13 @@
   background-size: 100%;
   background-repeat: no-repeat;
   position: relative;
+  isolation: isolate;
 }
 
 .container::before {
   content: "";
   position: absolute;
+  z-index: -1;
   inset: 0;
   background-color: #ff000034;
   backdrop-filter: blur(0.25rem);
